<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout_registration"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="20dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kushal.boulders.activities.RegistrationActivity">

    <ImageView
        android:id="@+id/iv_applogo"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bo_banner"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/ll_layout_registration"/>

    <LinearLayout
       android:id="@+id/ll_layout_registration"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/iv_applogo"
       android:orientation="vertical">

    <TextView
        android:id="@+id/tv_linkToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:layout_marginBottom="@dimen/text_widget_margin"
        android:textSize="14sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_firstname" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_lastname" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_email" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_orgname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_orgname" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_orgname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_registerNext"
        android:theme="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_widget_margin"
        android:text="Next"
        android:textStyle="bold" />

    </LinearLayout>

    <include android:id="@+id/ll_securityscreen_layout"
        layout="@layout/app_registration_security"
        android:visibility="invisible"/>

</android.support.design.widget.CoordinatorLayout>
