<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="80dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kushal.boulders.activities.LoginActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bo_banner"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>

    <ProgressBar
        android:id="@+id/pb_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="10dp"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:layout_gravity="center_horizontal"
        android:indeterminateTint="@color/colorBlue"
        android:layout_below="@+id/iv_applogo"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/ll_LoginLayout"
        android:layout_below="@+id/pb_progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginTop="20dp"
        >


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_username"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:theme="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_widget_margin"
        android:text="@string/button_login"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_linkToForgetPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/text_widget_margin" />

    <TextView
        android:id="@+id/tv_linkToRegistration"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />

</LinearLayout>

    <include android:id="@+id/ll_userforgotpassword_layout"
        layout="@layout/app_login_forgot"
        android:visibility="invisible"/>

    <include android:id="@+id/ll_userverifysecurity_layout"
        layout="@layout/app_login_verifysecurity"
        android:visibility="invisible"/>

    <include android:id="@+id/ll_userchangepassword_layout"
        layout="@layout/app_login_changepassword"
        android:visibility="invisible"/>


</android.support.design.widget.CoordinatorLayout>
