<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    android:layout_below="@+id/iv_applogo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kushal.boulders.activities.LoginActivity"
    tools:showIn="@layout/activity_registration">


    <LinearLayout
        android:id="@+id/ll_reg_securityVerification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lbl_reg_userSequrityQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Set a security question so you don't get locked out"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Spinner
                android:id="@+id/dd_reg_userSequrityQuestion"
                android:background="@drawable/spinner_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edt_reg_userAnswerInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Your Answer"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lbl_reg_setpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Set Password"/>

        <TextView
            android:id="@+id/tv_reg_setpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_setpass" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_reg_setpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvreg__confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_confirmpass" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_reg_confirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:theme="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_widget_margin"
            android:text="@string/button_Register"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>


